--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -36,6 +36,9 @@
 :root {
 	--color-white: #fff;
 	--color-black: #101010;
+	--color-red: #f15a5b;
+	--color-main-background: #cfcfcf;
+	--standart-sections-margin: min(5vw, 7.5rem) 0;
 }
 
 * {
@@ -48,9 +51,26 @@ body {
 	padding: 0;
 	font-size: 62.5%;
 	font-family: NeueMontreal, serif;
+	-ms-overflow-style: none; /* Internet Explorer 10+ */
+	scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+	display: none; /* Safari and Chrome */
 }
 
 h1 {
 	font-size: clamp(5.5rem, 12vw, 10rem);
 	font-weight: 700;
+}
+
+h2 {
+	font-size: clamp(4rem, 9vw, 8rem);
+	font-weight: 600;
+}
+
+p {
+	font-size: clamp(1.6rem, 2vw, 2.2rem);
+	line-height: clamp(2.5rem, 2.2vw, 2.8rem);
+	font-weight: 500;
 }
