--- a/assets/styles/hamburger.css
+++ b/assets/styles/hamburger.css
@@ -19,9 +19,8 @@
 	margin: 0;
 	overflow: visible;
 
-	/* position: fixed; */
-	z-index: 100;
-	right: 10vw;
+	/* position: fixed;
+	z-index: 100; */
 }
 
 .hamburger:hover {
@@ -553,14 +552,16 @@
 .hamburger--emphatic .hamburger-inner::before {
 	left: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
-		top 0.05s 0.125s linear, left 0.125s 0.175s ease-in;
+		top 0.05s 0.125s linear,
+ left 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic .hamburger-inner::after {
 	top: 10px;
 	right: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
-		top 0.05s 0.125s linear, right 0.125s 0.175s ease-in;
+		top 0.05s 0.125s linear,
+ right 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic.is-active .hamburger-inner {
@@ -573,7 +574,8 @@
 	left: -80px;
 	top: -80px;
 	transform: translate3d(80px, 80px, 0) rotate(45deg);
-	transition: left 0.125s ease-out, top 0.05s 0.125s linear,
+	transition: left 0.125s ease-out,
+ top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -581,7 +583,8 @@
 	right: -80px;
 	top: -80px;
 	transform: translate3d(-80px, 80px, 0) rotate(-45deg);
-	transition: right 0.125s ease-out, top 0.05s 0.125s linear,
+	transition: right 0.125s ease-out,
+ top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -599,14 +602,16 @@
 .hamburger--emphatic-r .hamburger-inner::before {
 	left: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
-		top 0.05s 0.125s linear, left 0.125s 0.175s ease-in;
+		top 0.05s 0.125s linear,
+ left 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic-r .hamburger-inner::after {
 	top: 10px;
 	right: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
-		top 0.05s 0.125s linear, right 0.125s 0.175s ease-in;
+		top 0.05s 0.125s linear,
+ right 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic-r.is-active .hamburger-inner {
@@ -619,7 +624,8 @@
 	left: -80px;
 	top: 80px;
 	transform: translate3d(80px, -80px, 0) rotate(-45deg);
-	transition: left 0.125s ease-out, top 0.05s 0.125s linear,
+	transition: left 0.125s ease-out,
+ top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -627,7 +633,8 @@
 	right: -80px;
 	top: 80px;
 	transform: translate3d(-80px, -80px, 0) rotate(45deg);
-	transition: right 0.125s ease-out, top 0.05s 0.125s linear,
+	transition: right 0.125s ease-out,
+ top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -636,14 +643,16 @@
      */
 .hamburger--minus .hamburger-inner::before,
 .hamburger--minus .hamburger-inner::after {
-	transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out,
+	transition: bottom 0.08s 0s ease-out,
+ top 0.08s 0s ease-out,
 		opacity 0s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before,
 .hamburger--minus.is-active .hamburger-inner::after {
 	opacity: 0;
-	transition: bottom 0.08s ease-out, top 0.08s ease-out,
+	transition: bottom 0.08s ease-out,
+ top 0.08s ease-out,
 		opacity 0s 0.08s linear;
 }
 
