--- a/src/components/layouts/pageLayout.module.scss
+++ b/src/components/layouts/pageLayout.module.scss
@@ -13,7 +13,8 @@
 		[popout-start] var(--popout)
 		[content-start] var(--content) [content-end]
 		var(--popout) [popout-end] var(--feature) [feature-end] var(--full) [full-end];
-	overflow: hidden;
+
+	// overflow: hidden;
 
 	& > * {
 		grid-column: content;
