--- a/assets/styles/hamburger.css
+++ b/assets/styles/hamburger.css
@@ -24,11 +24,11 @@
 }
 
 .hamburger:hover {
-	opacity: 0.7;
+	/* opacity: 0.7; */
 }
 
 .hamburger.is-active:hover {
-	opacity: 0.7;
+	/* opacity: 0.7; */
 }
 
 .hamburger.is-active .hamburger-inner,
@@ -553,7 +553,7 @@
 	left: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
 		top 0.05s 0.125s linear,
- left 0.125s 0.175s ease-in;
+		left 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic .hamburger-inner::after {
@@ -561,7 +561,7 @@
 	right: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
 		top 0.05s 0.125s linear,
- right 0.125s 0.175s ease-in;
+		right 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic.is-active .hamburger-inner {
@@ -575,7 +575,7 @@
 	top: -80px;
 	transform: translate3d(80px, 80px, 0) rotate(45deg);
 	transition: left 0.125s ease-out,
- top 0.05s 0.125s linear,
+		top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -584,7 +584,7 @@
 	top: -80px;
 	transform: translate3d(-80px, 80px, 0) rotate(-45deg);
 	transition: right 0.125s ease-out,
- top 0.05s 0.125s linear,
+		top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -603,7 +603,7 @@
 	left: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
 		top 0.05s 0.125s linear,
- left 0.125s 0.175s ease-in;
+		left 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic-r .hamburger-inner::after {
@@ -611,7 +611,7 @@
 	right: 0;
 	transition: transform 0.125s cubic-bezier(0.6, 0.04, 0.98, 0.335),
 		top 0.05s 0.125s linear,
- right 0.125s 0.175s ease-in;
+		right 0.125s 0.175s ease-in;
 }
 
 .hamburger--emphatic-r.is-active .hamburger-inner {
@@ -625,7 +625,7 @@
 	top: 80px;
 	transform: translate3d(80px, -80px, 0) rotate(-45deg);
 	transition: left 0.125s ease-out,
- top 0.05s 0.125s linear,
+		top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -634,7 +634,7 @@
 	top: 80px;
 	transform: translate3d(-80px, -80px, 0) rotate(45deg);
 	transition: right 0.125s ease-out,
- top 0.05s 0.125s linear,
+		top 0.05s 0.125s linear,
 		transform 0.125s 0.175s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -644,7 +644,7 @@
 .hamburger--minus .hamburger-inner::before,
 .hamburger--minus .hamburger-inner::after {
 	transition: bottom 0.08s 0s ease-out,
- top 0.08s 0s ease-out,
+		top 0.08s 0s ease-out,
 		opacity 0s linear;
 }
 
@@ -652,7 +652,7 @@
 .hamburger--minus.is-active .hamburger-inner::after {
 	opacity: 0;
 	transition: bottom 0.08s ease-out,
- top 0.08s ease-out,
+		top 0.08s ease-out,
 		opacity 0s 0.08s linear;
 }
 
