finish header mobile,  start info section

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,6 +7,7 @@
 	--color-black-dark: #101010;
 	--color-main-dark: #0c1923;
 	--color-main-red: #d70f3e;
+	--color-main-red-light: #ff5f6d;
 	--color-main-background: #f6e8df;
 	--color-red: #f15a5b;
 	--standart-sections-margin: min(5vw, 7.5rem) 0;
