--- a/src/components/main/header/Header.module.scss
+++ b/src/components/main/header/Header.module.scss
@@ -6,7 +6,6 @@
 	align-items: center;
 
 	h1 {
-		margin-left: 2.5vw;
 		color: var(--color-main-dark);
 	}
 
@@ -16,22 +15,9 @@
 		aspect-ratio: 963 / 699;
 		border-radius: 50px 0 0 50px;
 
-		.arrowDown {
-			color: var(--color-white);
-			width: 5vw;
-			height: 5vw;
-			fill: var(--color-white);
-		}
-
-		button {
+		.downButton {
 			--button-size: 10vw;
 
-			border: none;
-			cursor: pointer;
-			width: var(--button-size);
-			aspect-ratio: 1 / 1;
-			border-radius: 50%;
-			background-color: var(--color-main-red);
 			position: absolute;
 			top: 10%;
 			left: calc((var(--button-size) / 2) * -1);
@@ -58,7 +44,7 @@
 		align-items: center;
 		position: relative;
 
-		.downButton {
+		.downButtonMobile {
 			position: absolute;
 			bottom: -10vw;
 			left: 50%;
