--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -24,7 +24,7 @@
 		}
 
 		@media (max-width: 600px) {
-			left: 25px;
+			left: 1rem;
 		}
 	}
 
@@ -34,7 +34,7 @@
 		z-index: 100;
 
 		@media (max-width: 600px) {
-			right: 25px;
+			right: 1rem;
 		}
 	}
 
@@ -50,7 +50,7 @@
 	}
 
 	@media (max-width: 600px) {
-		height: 10rem;
+		height: 8rem;
 	}
 }
 
