--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,9 +1,4 @@
 .wrapper {
-	height: 200vh;
+	min-height: 300vh;
 	background: var(--color-main-background);
-
-	.introSection {
-		grid-column: full-start / feature-end;
-		height: 40vw;
-	}
 }
