--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -11,7 +11,7 @@
 
 	.logo {
 		position: absolute;
-		left: 50px;
+		left: min(2.5vw, 50px);
 		color: var(--color-main-dark);
 		font-size: clamp(2.5rem, 5vw, 4rem);
 		font-weight: 600;
