--- a/src/components/main/smallGallery/SmallGallery.module.scss
+++ b/src/components/main/smallGallery/SmallGallery.module.scss
@@ -47,7 +47,7 @@
 			text-shadow: 8px 0 27px rgb(255 255 255 / 50%);
 
 			@media (max-width: 900px) {
-				font-size: 14vw;z
+				font-size: 14vw;
 			}
 		}
 
