--- a/src/components/miscs/halfCircleButton.module.scss
+++ b/src/components/miscs/halfCircleButton.module.scss
@@ -25,6 +25,11 @@
 			height: calc(var(--width) / 5);
 			transform: translate(-50%, -50%);
 
+			g {
+				width: 100%;
+				height: 100%;
+			}
+
 			path {
 				color: var(--color-white);
 				fill: var(--color-white);
