--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -73,3 +73,57 @@ br {
 	line-height: clamp(2rem, 2vw, 2.4rem);
 	font-weight: 500;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+	width: min(15vw, 15rem) !important;
+	aspect-ratio: 1 !important;
+	top: 50% !important;
+
+	svg {
+		width: 100%;
+		height: 200%;
+
+		path {
+			fill: var(--color-main-red);
+		}
+	}
+
+	&::after {
+		display: none;
+	}
+
+	@media (max-width: 900px) {
+		width: min(7.5vw, 7.5rem) !important;
+	}
+}
+
+.swiper-button-next {
+	@media (max-width: 900px) {
+		right: 0 !important;
+	}
+
+	@media (max-width: 600px) {
+		right: 5px !important;
+	}
+}
+
+.swiper-button-prev {
+	@media (max-width: 900px) {
+		left: 0 !important;
+	}
+
+	@media (max-width: 600px) {
+		left: 12px !important;
+	}
+}
+
+.swiper-button-next {
+	@media (max-width: 900px) {
+		right: 0 !important;
+	}
+
+	@media (max-width: 600px) {
+		right: 12px !important;
+	}
+}
