--- a/src/components/main/testimonials/testimonialsSection.module.scss
+++ b/src/components/main/testimonials/testimonialsSection.module.scss
@@ -15,6 +15,11 @@
 	justify-content: center;
 	align-items: flex-start;
 	gap: 8rem;
+	text-align: center;
+
+	p {
+		margin-inline: auto;
+	}
 
 	.quotes {
 		place-self: center;
