--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -6,6 +6,7 @@
 	--color-grey-dark: #303030;
 	--color-black-dark: #101010;
 	--color-main-dark: #0c1923;
+	--color-dark-alt: #1d2936;
 	--color-main-red: #d70f3e;
 	--color-main-red-light: #ff5f6d;
 	--color-main-background: #f6e8df;
