finish mobile gallery view, project id section add styling

--- a/pages/projects/id.module.scss
+++ b/pages/projects/id.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
 	width: 100vw;
 	height: fit-content;
-	background: var(--color-black-dark);
+	background: var(--color-main-dark);
 
 	.absoluteMenu {
 		width: 100%;
@@ -16,6 +16,25 @@
 		position: relative;
 		z-index: 0;
 
+		h1 {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			text-align: center;
+			transform: translate(-50%, -50%);
+			color: var(--color-white);
+			z-index: 5;
+		}
+
+		&::after {
+			position: absolute;
+			content: '';
+			width: 100%;
+			height: 100%;
+			background: rgb(12 25 35 / 60%);
+			z-index: 1;
+		}
+
 		img {
 			width: 100%;
 			object-fit: cover;
@@ -24,7 +43,7 @@
 
 	.projectInfo {
 		color: var(--color-white);
-		background: var(--color-black-dark);
+		background: var(--color-main-dark);
 		height: 10dvh;
 		display: flex;
 		justify-content: space-between;
@@ -42,8 +61,8 @@
 			text-decoration: none;
 
 			&:hover {
-				color: var(--color-red);
-				fill: var(--color-red) !important;
+				color: var(--color-main-red);
+				fill: var(--color-main-red) !important;
 			}
 
 			span {
@@ -52,14 +71,15 @@
 		}
 
 		a:hover > .arrowLeft {
-			fill: var(--color-red) !important;
+			fill: var(--color-main-red) !important;
 		}
 	}
 
 	.projectDescription {
 		margin: var(--standart-sections-margin);
-		background-color: var(--color-black-dark);
+		background: var(--color-main-dark);
 		color: var(--color-white);
+		margin-bottom: min(15vw, 15rem);
 	}
 
 	.gallery {
@@ -67,31 +87,31 @@
 
 		.galleryImage {
 			position: relative;
-			margin: 0 0 min(10vw, 10rem) 0;
+			margin-bottom: min(15rem, 15vw);
 
 			img {
+				width: 100%;
+				height: 100%;
 				object-fit: contain;
+				border-radius: 30px;
 			}
 
 			&:nth-child(even) {
 				width: 45%;
-				height: 25vw;
 			}
 
 			&:nth-child(odd) {
 				width: 60%;
-				height: 30vw;
 				place-self: end;
 			}
 
 			&:nth-child(4n + 2) {
 				width: 75%;
-				height: 40vw;
 			}
 
 			&:first-child {
-				width: 100%;
-				height: 50vw;
+				width: 80%;
+				place-self: center;
 			}
 		}
 	}
