--- a/src/components/main/footer/footer.module.scss
+++ b/src/components/main/footer/footer.module.scss
@@ -22,6 +22,12 @@
 		& > * {
 			top: 60%;
 		}
+
+		@media (max-width: 600px) {
+			& > * {
+				top: 100%;
+			}
+		}
 	}
 
 	a,
@@ -70,6 +76,7 @@
 			}
 
 			@media (max-width: 600px) {
+				margin-top: 10vw;
 				grid-template-columns: repeat(1, auto);
 				gap: 4rem;
 			}
