add lsome links on main

--- a/src/components/main/smallGallery/SmallGallery.module.scss
+++ b/src/components/main/smallGallery/SmallGallery.module.scss
@@ -2,6 +2,10 @@
 	grid-column: feature;
 	margin: var(--standart-sections-margin);
 
+	a {
+		text-decoration: none;
+	}
+
 	.images {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
