--- a/src/components/main/contacts/contactSection.module.scss
+++ b/src/components/main/contacts/contactSection.module.scss
@@ -8,6 +8,11 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 
+		a {
+			text-decoration: none;
+			color: inherit;
+		}
+
 		.contact {
 			width: 100%;
 			display: flex;
