--- a/src/components/main/info/InfoBlock.module.scss
+++ b/src/components/main/info/InfoBlock.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-	grid-column: full-start / feature-end;
+	grid-column: full-start / feature-end !important;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
