--- a/src/components/main/info/InfoBlock.module.scss
+++ b/src/components/main/info/InfoBlock.module.scss
@@ -28,7 +28,7 @@
 	}
 
 	@media (max-width: 900px) {
-		grid-column: feature;
+		grid-column: feature !important;
 
 		.textContent {
 			width: 100%;
