fix burger and small style changes

--- a/src/components/main/header/Header.module.scss
+++ b/src/components/main/header/Header.module.scss
@@ -32,7 +32,7 @@
 }
 
 .heroSectionMobile {
-	grid-column: full;
+	grid-column: full !important;
 	margin-bottom: min(15vw, 15rem);
 
 	.redWrapper {
