--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -62,14 +62,13 @@
 		height: 7rem;
 		background-color: var(--color-main-dark);
 		border-radius: 50%;
-		top: -22px;
-		left: -9px;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 
 		@media (max-width: 600px) {
 			width: 6rem;
 			height: 6rem;
-			top: -17px;
-			left: -5px;
 		}
 	}
 
