id style change to svh

--- a/pages/projects/id.module.scss
+++ b/pages/projects/id.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
 	width: 100vw;
-	height: fit-content;
+	// height: fit-content;
 	background: var(--color-main-dark);
 
 	.absoluteMenu {
@@ -12,7 +12,7 @@
 
 	.hero {
 		width: 100%;
-		height: 90vh;
+		height: 90svh;
 		position: relative;
 		z-index: 0;
 
