--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -65,6 +65,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		border: 2px solid var(--color-dark-alt);
 
 		@media (max-width: 600px) {
 			width: 6rem;
