change lanuage switch, add documnet file

--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -106,6 +106,10 @@
 		gap: 5rem;
 		justify-content: center;
 		align-items: flex-end;
+
+		@media (max-width: 600px) {
+			justify-content: flex-end;
+		}
 	}
 
 	.mainMenuLinks {
