--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -28,6 +28,7 @@ body {
 	font-family: 'Merriweather Sans', sans-serif;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
+	-webkit-overflow-scrolling: touch;
 }
 
 html::-webkit-scrollbar {
