--- a/pages/projects/id.module.scss
+++ b/pages/projects/id.module.scss
@@ -31,11 +31,14 @@
 			width: 100%;
 			height: 100%;
 			background: rgb(12 25 35 / 60%);
-			z-index: 1;
+			z-index: 2;
 		}
 
 		img {
+			position: absolute;
+			z-index: 1;
 			width: 100%;
+			height: 100%;
 			object-fit: cover;
 		}
 	}
